--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/truth/cordova-plugin-pick"
+    "url": "https://github.com/truth/cordova-plugin-pick.git"
   },
   "keywords": [
     "cordova",
