--- a/plugin.xml
+++ b/plugin.xml
@@ -14,5 +14,8 @@
         <source-file src="src/android/Pick.java" target-dir="src/com/llzc/pick/Pick" />
         <source-file src="src/android/WheelView.java" target-dir="src/com/llzc/pick/WheelView" />
         <source-file src="src/android/Library/res/layout/wheel_view.xml" target-dir="res/layout/" />
+        <source-file src="src/android/Library/res/drawable/transpant_bg.xml" target-dir="res/drawable/" />
+        <source-file src="src/android/Library/res/values/color.xml" target-dir="res/values/" />
+        <source-file src="src/android/Library/res/values/style.xml" target-dir="res/values/" />
     </platform>
 </plugin>
